extract search fields to separate component

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -107,8 +107,9 @@
         </div>
         <div class="col py-3">
             <app-manage-basecards
-            [hidden]="searchFieldsVisibility"
-            [baseCards]="baseCards"></app-manage-basecards>
+            [baseCards]="baseCards"
+            [searchFieldsVisibility]="searchFieldsVisibility"
+            ></app-manage-basecards>
         </div>
     </div>
 </div>
