--- a/src/app/admin/manage-basecards/manage-basecards.component.html
+++ b/src/app/admin/manage-basecards/manage-basecards.component.html
@@ -13,20 +13,10 @@
         </ul>
     </ul>
 </div>-->
-<div class="input-group row "
-     id="block-search"
-     *ngFor="let cardProperty of getObjectEntries(baseCardSkeleton)"
->
-    <label for="search_{{cardProperty[0]}}"
-           [innerHTML]='cardProperty[0]'>
+<app-search-fields
+        [hidden]="searchFieldsVisibility"
+        ></app-search-fields>
 
-    </label>
-    <input
-            class="input-group"
-            type="text"
-            id="search_{{cardProperty[0]}}"
-            [attr.data-search]=cardProperty[0]>
-</div>
 
 <app-base-card-list
 [baseCards]="baseCards"></app-base-card-list>
