--- a/src/app/admin/manage-basecards/manage-basecards.component.html
+++ b/src/app/admin/manage-basecards/manage-basecards.component.html
@@ -14,7 +14,7 @@
     </ul>
 </div>-->
 <app-search-fields
-        [hidden]="searchFieldsVisibility"
+        [hidden]="searchFieldsVisible()"
         ></app-search-fields>
 
 
