add selectedCard to admin attribute

--- a/src/app/admin/manage-basecards/manage-basecards.component.html
+++ b/src/app/admin/manage-basecards/manage-basecards.component.html
@@ -20,3 +20,6 @@
 
 <app-base-card-list
 [baseCards]="baseCards"></app-base-card-list>
+<app-card
+        [baseCard]=getSelectedCard()
+></app-card>
