--- a/src/app/admin/manage-basecards/base-card-list/base-card-list.component.html
+++ b/src/app/admin/manage-basecards/base-card-list/base-card-list.component.html
@@ -3,6 +3,7 @@
                 type="button"
                 class="list-group-item list-group-item-action"
                 style="padding: 2px"
+                (click)="selectedCard(baseCard)"
         >{{baseCard.manufacturer}} {{baseCard.type}} {{baseCard.year}}</button>
 
 </div>
