--- a/src/app/admin/manage-basecards/search-fields/search-fields.component.html
+++ b/src/app/admin/manage-basecards/search-fields/search-fields.component.html
@@ -10,5 +10,7 @@
             class="input-group"
             type="text"
             id="search_{{cardProperty[0]}}"
-            [attr.data-search]=cardProperty[0]>
+            [attr.data-search]=cardProperty[0]
+            [innerHTML]="cardProperty[1]"
+            >
 </div>
