--- a/src/app/admin/manage-basecards/manage-basecards.component.html
+++ b/src/app/admin/manage-basecards/manage-basecards.component.html
@@ -1,28 +1,14 @@
-<!--<div [innerHTML]=baseCards[0]>
-
-</div>
-<div>
-    <ul *ngFor="let baseCard of baseCards">
-        <li>nev</li>
-        <li [innerHTML]="baseCard"></li>
-        <ul *ngFor="let prop of getObjectEntries(baseCard)">
-            <li [innerHTML]="prop[0]"></li>
-            <ul>
-                <li [innerHTML]="prop[1]"></li>
-            </ul>
-        </ul>
-    </ul>
-</div>-->
 <button
-        (click)="getFilteredCards()">FILTER</button>
+        (click)="getFilteredCards()"
+>FILTER
+</button>
 <app-search-fields
         [hidden]="searchFieldsVisible()"
         [baseCardSkeleton]="baseCardSkeleton"
-        ></app-search-fields>
-
-
+></app-search-fields>
 <app-base-card-list
-[baseCards]="baseCards"></app-base-card-list>
+        [baseCards]="baseCards"
+></app-base-card-list>
 <app-card
         [baseCard]=getSelectedCard()
 ></app-card>
