--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,191 +1,163 @@
-@import url("https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap");
-*,
-*::after,
-*::before {
-    margin: 0;
+* {
+    margin: 0 auto;
     padding: 0;
-    box-sizing: inherit;
 }
 
-html {
-    font-size: 48.5%;
+*:focus {
+    outline: none;
 }
 
 body {
-    background: orange;
-    font-family: "Rubik", sans-serif;
-    font-weight: 400;
-    line-height: 1.7;
-    padding: 3rem;
-    box-sizing: border-box;
+    margin-top: 70px;
+    background-color: #f4f4f4;
+    font-family: 'Raleway', sans-serif;
+    font-size: 62.5%;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.grids {
-    max-width: 136rem;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 3rem;
-    grid-row-gap: 3rem;
+h1,
+p,
+a,
+span {
+    color: #fff;
+    letter-spacing: 0.02em;
+    font-weight: 600;
 }
 
-.card-one {
-    grid-column: 1/8;
+h1,
+p,
+a {
+    padding-left: 40px;
 }
 
-.card-two {
-    grid-column: 1/8;
+h1 {
+    font-size: 2.5em;
 }
-.card {
-    perspective: 150rem;
-    -moz-perspective: 150rem;
+
+p {
+    font-size: 1.5em;
+    line-height: 25px;
+}
+
+button {
+    border: 0;
+    border-radius: 26px;
+    padding-bottom: 2px;
+}
+
+span {
+    font-size: 1.6em;
+}
+
+.container,
+.flip-box,
+.front,
+.back {
+    width: 300px;
+    height: 360px;
+    border-radius: 15px;
+}
+
+.container,
+.flip_box {
     position: relative;
-    height: 25rem;
-    width: 100%;
-    transition: all ease-in-out 400ms;
-    cursor: pointer;
 }
 
-.card:hover {
-    transform: scale(1.05);
-}
-
-.card:active {
-    transform: translateY(-1px);
-}
-
-.card__side {
-    transition: all 0.8s ease;
-    color: white;
-    font-size: 2rem;
+.front,
+.back {
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 25rem;
-    width: 100%;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
     backface-visibility: hidden;
-    box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.4);
-    border-radius: 8px;
 }
 
-.card__side--front {
-    background-color: #2196f3;
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.container {
+    -moz-transform: perspective(1200px);
+    -webkit-perspective: 1200px;
+    perspective: 1200px;
 }
 
-.card__side--back {
-    background-color: #303f9f;
+.flip_box,
+.r_wrap {
+    transition: all 0.5s ease-out;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+}
+
+.front {
+    background-color: #024395;
+    /*background-image: url('https://img-fotki.yandex.ru/get/194550/29644339.5/0_d6c5f_c9f15850_orig');*/
+}
+
+.back {
+    background-color: #D21849;
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
     transform: rotateY(180deg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
-.showGreen {
+.b_button:hover {
+    background-color: #E30143;
+}
+
+.flipped {
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
 }
 
-.showRed {
-    transform: rotateY(0);
-}
-
-.text-box {
+.r_wrap {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    width: 100%;
+    transition: all 0.5s ease-out;
+    bottom: 52px;
 }
 
-.text-box-top {
-    font-size: 2.2rem;
-    text-shadow: 2px 2px 10px #0000006c;
-    font-weight: 40;
+.b_round,
+.s_round {
+    position: absolute;
+    width: 300px;
+    height: 52px;
+    border-radius: 0px 0px 15px 15px;
+    transition: all 0.5s ease-out;
+    background-color: #D21849;
 }
 
-.text-box-middle {
-    font-size: 3.5rem;
-    font-weight: 70;
-    text-shadow: 2px 2px 10px #0000006c;
-}
-
-.text-box-lower {
-    font-size: 1.2rem;
-    text-shadow: 2px 2px 10px #0000006c;
-    font-weight: 40;
-}
-
-.heading {
-    transition: all 0.6s linear;
-}
-
-.hide {
-    visibility: hidden;
+/*ez kell*/
+.b_round {
     opacity: 0;
+    background-color: #D21849;
 }
 
-.show {
-    visibility: visible;
-    opacity: 1;
+.b_round_back_hover {
+    background-color: #F60044;
 }
 
-#front-1 {
-    background-image: linear-gradient(
-            rgba(204, 30, 88, 0.6),
-            rgba(20, 20, 20, 0.6)
-    ),
-    url("https://images.unsplash.com/photo-1527529482837-4698179dc6ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
+.s_round_back {
+    background-color: #C30C3D;
 }
 
-#front-2 {
-    background-image: linear-gradient(
-            rgba(31, 136, 168, 0.767),
-            rgba(14, 46, 65, 0.9)
-    ),
-    url("https://images.unsplash.com/photo-1508599804355-8ce5238b44b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
+.s_arrow {
+    width: 52px;
+    height: 52px;
+    background-image: url('https://img-fotki.yandex.ru/get/194549/29644339.5/0_d6c60_1d7815f0_orig');
+    background-color: transparent;
 }
 
-/* Back */
+.s_arrow_back {
+    transform: rotate(180deg);
 
-#back-1 {
-    background-image: linear-gradient(
-            rgba(204, 30, 88, 0.6),
-            rgba(20, 20, 20, 0.6)
-    ),
-    url("https://images.unsplash.com/photo-1527529482837-4698179dc6ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
 }
 
-#back-2 {
-    background-image: linear-gradient(
-            rgba(31, 136, 168, 0.767),
-            rgba(14, 46, 65, 0.9)
-    ),
-    url("https://images.unsplash.com/photo-1508599804355-8ce5238b44b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=80");
+.img-container {
+    height: 45%;
+    overflow-x: hidden;
+    border-radius: 15px 15px 0px 0px;
 }
 
-@media screen and (min-width: 1024px) {
-    html {
-        font-size: 62.5%;
-    }
-
-    .grids {
-        max-width: 136rem;
-        margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 3rem;
-        grid-row-gap: 3rem;
-    }
-
-    .card-one {
-        grid-column: 1/8;
-    }
-
-    .card-two {
-        grid-column: 1/8;
-    }
+.img-car {
+    object-fit: cover;
 }
