add attribute fields to manage page

--- a/src/app/admin/manage-basecards/manage-basecards.component.html
+++ b/src/app/admin/manage-basecards/manage-basecards.component.html
@@ -12,3 +12,5 @@
 <app-card
         [baseCard]=getSelectedCard()
 ></app-card>
+<app-card-attr-fields
+[baseCard]=getSelectedCard()></app-card-attr-fields>
