add update baseCard button

--- a/src/app/admin/card-attr-fields/card-attr-fields.component.html
+++ b/src/app/admin/card-attr-fields/card-attr-fields.component.html
@@ -1,3 +1,7 @@
+<button
+        (click)="updateBaseCard()"
+>Update card
+</button>
 <div class="input-group row "
      id="block-card-attributes"
      *ngFor="let cardProperty of getObjectEntries(baseCard)"
