add delete baseCard

--- a/src/app/admin/card-attr-fields/card-attr-fields.component.html
+++ b/src/app/admin/card-attr-fields/card-attr-fields.component.html
@@ -2,6 +2,9 @@
         (click)="updateBaseCard()"
 >Update card
 </button>
+<button
+    (click)="deleteBaseCard()"
+    >Delete card</button>
 <div class="input-group row "
      id="block-card-attributes"
      *ngFor="let cardProperty of getObjectEntries(baseCard)"
