--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,7 +2,8 @@
     <div class='flip_box'>
         <div class='front'>
             <div
-                    class="img-container">
+                    class="img-container"
+            >
                 <img
                         class="img-car"
                         [style.width]=baseCard.objectWidth
@@ -11,10 +12,108 @@
                         [src]=baseCard.imageUrl
                 />
             </div>
+            <div>
+                <div></div>
+                <div class="manufacturer-name"
+                     style="white-space: nowrap;"
+                     id="manufacturer-div"
+                     [innerHTML]="baseCard.id"></div>
+                <div class="manufacturer-name"
+                     style="white-space: nowrap;"
+                     id="manufacturer-type"
+                     [innerHTML]="baseCard.type"></div>
+            </div>
+            <!--<table class="front-table"
+                   style="border: #86b7fe solid 2px">
+                <tr>
+                    <td>Top spped (km/h)</td>
+                    <td>{{baseCard.objectWidth}}</td>
+                </tr>
+                <tr>
+                    <td>Top spped (km/h)</td>
+                    <td>{{baseCard.objectHeight}}</td>
+                </tr>
+                <tr>
+                    <td>Top spped (km/h)</td>
+                    <td>{{baseCard.objectPositionHorizontal}}</td>
+                </tr>
+                <tr>
+                    <td>Top spped (km/h)</td>
+                    <td>{{baseCard.objectPositionVertical}}</td>
+                </tr>
+            </table>-->
         </div>
         <div class='back'>
-            <h1 class='b_headline'>Absolute safety</h1>
-            <button class='b_button'><span>Buy now</span></button>
+            <!--<h1 class='b_headline'>Absolute safety</h1>
+            <button class='b_button'><span>Buy now</span></button>-->
+            <div class="container-fluid">
+                <ul class="nav nav-tabs nav-fill nav-justified" id="back-tabs_{{baseCard.id}}">
+                    <li
+                            class="nav-item">
+                        <a class="nav-link active" href="#i_{{baseCard.id}}" data-bs-toggle="tab">I</a>
+                    </li>
+                    <li
+                            class="nav-item">
+                        <a class="nav-link" href="#ii_{{baseCard.id}}" data-bs-toggle="tab">II</a>
+                    </li>
+                    <li
+                            class="nav-item">
+                        <a class="nav-link" href="#iii_{{baseCard.id}}" data-bs-toggle="tab">III</a>
+                    </li>
+                    <li
+                            class="nav-item">
+                        <a class="nav-link" href="#iv_{{baseCard.id}}" data-bs-toggle="tab">IV</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="tab-content container-fluid" id="back-tabs-content">
+                <div
+                        class="tab-pane active"
+                        id="i_{{baseCard.id}}">
+                    <table class="table table-striped back-table"
+                           style="height: 100%">
+                        <tbody>
+                        <tr *ngFor="let data of iTabDatas()">
+                            <th scope="row" [innerHTML]=data></th>
+                            <td>{{data}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane" id="ii_{{baseCard.id}}">
+                    <table class="table table-striped back-table"
+                           style="height: 100%">
+                        <tbody>
+                        <tr *ngFor="let data of iiTabDatas()">
+                            <th scope="row" [innerHTML]=data></th>
+                            <td>{{data}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane" id="iii_{{baseCard.id}}">
+                    <table class="table table-striped back-table"
+                           style="height: 100%">
+                        <tbody>
+                        <tr *ngFor="let data of iiiTabDatas()">
+                            <th scope="row" [innerHTML]=data></th>
+                            <td>{{data}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane" id="iv_{{baseCard.id}}">
+                    <table class="table table-striped back-table"
+                           style="height: 100%">
+                        <tbody>
+                        <tr *ngFor="let data of ivTabDatas()">
+                            <th scope="row" [innerHTML]=data></th>
+                            <td>{{data}}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
     <div class='r_wrap'>
