add droptable to admin

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -24,8 +24,8 @@
                             <li (click)="getFilteredBaseCards()">
                                 <button class="nav-link px-0">Filtered baseCards</button>
                             </li>
-                            <li>
-                                <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
+                            <li (click)="dropBaseCardsTable()">
+                                <button class="nav-link px-0">Drop table</button>
                             </li>
                         </ul>
                     </li>
