--- a/src/app/admin/card-attr-fields/card-attr-fields.component.html
+++ b/src/app/admin/card-attr-fields/card-attr-fields.component.html
@@ -1,8 +1,15 @@
 <button
+        type="button"
         (click)="updateBaseCard()"
 >Update card
 </button>
 <button
+        type="button"
+        (click)="bulkUpdateBaseCard()"
+>Bul Update card
+</button>
+<button
+        type="button"
     (click)="deleteBaseCard()"
     >Delete card</button>
 <div class="input-group row "
