--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-
 <button (click)="toAdminPage()">To admin page</button>
-
-<router-outlet></router-outlet>
+<div class="page-container">
+    <div class="page-content">
+<!--        <div class="flex-container">-->
+            <router-outlet></router-outlet>
+            <!--<app-home></app-home>-->
+        <!--</div>-->
+    </div>
+</div>
