--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
+
+html, body {
+    height: 100%;
+    margin: 0 auto;
+    min-width: 800px;
+    max-width: 1024px;
+}
+
+.page-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: 56.25%; /* 9/16 * 100% = 56.25% */
+    background-image: url("src/assets/img/menus/home-screen-background3.webp");
+    background-size: cover;
+}
+
+.page-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
