--- a/src/app/pages/garage/garage.component.html
+++ b/src/app/pages/garage/garage.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="grid-container">
     <!--<div class="container-fluid">-->
     <!--<app-font-size-variable></app-font-size-variable>-->
     <app-card
