--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -119,7 +119,6 @@ span {
 .b_round,
 .s_round {
     position: absolute;
-    /*width: 300px;*/
     width: 300px;
     height: 52px;
     border-radius: 0px 0px 15px 15px;
@@ -174,5 +173,7 @@ td {
 }
 
 .manufacturer-name {
-    font-size: 30px;
+    max-width: 300px;
+    overflow: hidden;
+    white-space: nowrap;
 }
