home menu created

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,7 +4,7 @@
     padding: 20px;
     align-items: center;
     justify-content: center;
-    min-height: calc(100% - 128px); /* Subtracting the header and footer height */
+    height: calc(100% - 128px); /* Subtracting the header and footer height */
     /*grid-template-columns: repeat(auto-fit, minmax(calc(33% - 10px), 1fr));*/
     grid-template-columns: repeat(3, 1fr);
 
@@ -25,12 +25,6 @@
 }
 
 
-header, footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    text-align: center;
-}
 
 .flex-container {
     display: flex;
@@ -47,4 +41,12 @@ header, footer {
 
 .garage {
     background-image: url("src/assets/img/menus/mygarage.webp");
+}
+
+.shop {
+    background-image: url("src/assets/img/menus/shop.webp");
+}
+
+.challenges {
+    background-image: url("src/assets/img/menus/challenges.webp");
 }
