--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,9 @@
-<header>Header</header>
+
 <div class="grid-container">
-    <div class="grid-item races"><h2>Daily races</h2></div>
-    <div class="grid-item"><h2>2</h2></div>
+    <div class="grid-item races"><h2>PvP races</h2></div>
+    <div class="grid-item challenges" [routerLink]="['challendes']"><h2>Challenges</h2></div>
     <div class="grid-item"><h2>3</h2></div>
-    <div class="grid-item garage" (click)="toGarage()"><h2>My garage</h2></div>
-    <div class="grid-item"><h2>5</h2></div>
+    <div class="grid-item garage" [routerLink]="['garage']"><h2>My garage</h2></div>
+    <div class="grid-item shop" [routerLink]="['shop']"><h2>Shop</h2></div>
     <div class="grid-item"><h2>6</h2></div>
 </div>
-<footer>Footer</footer>
