add search and filter component

--- a/src/app/pages/garage/garage.component.html
+++ b/src/app/pages/garage/garage.component.html
@@ -1,3 +1,4 @@
+<app-search-and-filter-bar></app-search-and-filter-bar>
 <div class="grid-container">
     <app-card
             *ngFor="let playerCard of playerCards | paginate : {
