--- a/src/app/pages/garage/garage.component.html
+++ b/src/app/pages/garage/garage.component.html
@@ -6,7 +6,7 @@
             currentPage: page,
             totalItems: count
         };"
-            [baseCard]="playerCard"
+            [playerCard]="playerCard"
     >
 
     </app-card>
