--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,78 +1,78 @@
 <div class='container'>
-    <div class='flip_box' id="card_{{baseCard.id}}">
+    <div class='flip_box' id="card_{{playerCard.id}}">
         <div class='front'>
             <div
                     class="img-container"
             >
                 <img
                         class="img-car"
-                        [style.width]=baseCard.objectWidth
-                        [style.height]=baseCard.objectHeight
-                        [style.object-position]="baseCard.objectPositionHorizontal + ' ' + baseCard.objectPositionVertical"
-                        [src]=baseCard.imageUrl
+                        [style.width]=playerCard.baseCard.objectWidth
+                        [style.height]=playerCard.baseCard.objectHeight
+                        [style.object-position]="playerCard.baseCard.objectPositionHorizontal + ' ' + playerCard.baseCard.objectPositionVertical"
+                        [src]=playerCard.baseCard.imageUrl
                 />
             </div>
             <div>
                 <div></div>
                 <div class="manufacturer-name"
                      style="white-space: nowrap;"
-                     [id]="cssEscape('#card_' + baseCard.id)"
-                     [innerHTML]="baseCard.id"></div>
+                     [id]="cssEscape('#card_' + playerCard.id)"
+                     [innerHTML]="playerCard.baseCard.id"></div>
                 <!--<div [ngStyle]="{ 'width.px': 300, 'white-space': 'nowrap', 'font-size.px': calculateFontSize() }">
-                    {{ baseCard.id }}
+                    {{ playerCard.baseCard.id }}
                 </div>-->
 
 
                 <div class="manufacturer-name"
                      style="white-space: nowrap;"
                      id="manufacturer-type"
-                     [innerHTML]="baseCard.type"></div>
+                     [innerHTML]="playerCard.baseCard.type"></div>
             </div>
             <table class="front-table"
                    style="border: #86b7fe solid 2px">
                 <tr>
                     <td>Top spped (km/h)</td>
-                    <td>{{baseCard.objectWidth}}</td>
+                    <td>{{playerCard.baseCard.objectWidth}}</td>
                 </tr>
                 <tr>
                     <td>Top spped (km/h)</td>
-                    <td>{{baseCard.objectHeight}}</td>
+                    <td>{{playerCard.baseCard.objectHeight}}</td>
                 </tr>
                 <tr>
                     <td>Top spped (km/h)</td>
-                    <td>{{baseCard.objectPositionHorizontal}}</td>
+                    <td>{{playerCard.baseCard.objectPositionHorizontal}}</td>
                 </tr>
                 <tr>
                     <td>Top spped (km/h)</td>
-                    <td>{{baseCard.objectPositionVertical}}</td>
+                    <td>{{playerCard.baseCard.objectPositionVertical}}</td>
                 </tr>
             </table>
         </div>
         <div class='back'>
             <div class="container-fluid">
-                <ul class="nav nav-tabs nav-fill nav-justified" id="back-tabs_{{baseCard.id}}">
+                <ul class="nav nav-tabs nav-fill nav-justified" id="back-tabs_{{playerCard.id}}">
                     <li
                             class="nav-item">
-                        <a class="nav-link active" [href]="cssEscape('#i_' + baseCard.id)" data-bs-toggle="tab">I</a>
+                        <a class="nav-link active" [href]="cssEscape('#i_' + playerCard.id)" data-bs-toggle="tab">I</a>
                     </li>
                     <li
                             class="nav-item">
-                        <a class="nav-link" [href]="cssEscape('#ii_' + baseCard.id)" data-bs-toggle="tab">II</a>
+                        <a class="nav-link" [href]="cssEscape('#ii_' + playerCard.id)" data-bs-toggle="tab">II</a>
                     </li>
                     <li
                             class="nav-item">
-                        <a class="nav-link" [href]="cssEscape('#iii_' + baseCard.id)" data-bs-toggle="tab">III</a>
+                        <a class="nav-link" [href]="cssEscape('#iii_' + playerCard.id)" data-bs-toggle="tab">III</a>
                     </li>
                     <li
                             class="nav-item">
-                        <a class="nav-link" [href]="cssEscape('#iv_' + baseCard.id)" data-bs-toggle="tab">IV</a>
+                        <a class="nav-link" [href]="cssEscape('#iv_' + playerCard.id)" data-bs-toggle="tab">IV</a>
                     </li>
                 </ul>
             </div>
             <div class="tab-content container-fluid" id="back-tabs-content">
                 <div
                         class="tab-pane active"
-                        id="i_{{baseCard.id}}">
+                        id="i_{{playerCard.id}}">
                     <table class="table table-striped back-table"
                            style="height: 100%">
                         <tbody>
@@ -83,7 +83,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="tab-pane" id="ii_{{baseCard.id}}">
+                <div class="tab-pane" id="ii_{{playerCard.id}}">
                     <table class="table table-striped back-table"
                            style="height: 100%">
                         <tbody>
@@ -94,7 +94,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="tab-pane" id="iii_{{baseCard.id}}">
+                <div class="tab-pane" id="iii_{{playerCard.id}}">
                     <table class="table table-striped back-table"
                            style="height: 100%">
                         <tbody>
@@ -105,7 +105,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="tab-pane" id="iv_{{baseCard.id}}">
+                <div class="tab-pane" id="iv_{{playerCard.id}}">
                     <table class="table table-striped back-table"
                            style="height: 100%">
                         <tbody>
@@ -121,7 +121,7 @@
     </div>
     <div class='r_wrap'>
         <div class='b_round'></div>
-        <div class='s_round' id="flip_button_{{baseCard.id}}"
+        <div class='s_round' id="flip_button_{{playerCard.id}}"
         (click)=flipCard()>
             <div class='s_arrow'></div>
         </div>
