--- a/src/app/admin/card-attr-fields/card-attr-fields.component.html
+++ b/src/app/admin/card-attr-fields/card-attr-fields.component.html
@@ -6,7 +6,7 @@
 <button
         type="button"
         (click)="bulkUpdateBaseCard()"
->Bul Update card
+>Bulk Update card
 </button>
 <button
         type="button"
