--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="grid-container">
     <div class="grid-item races"><h2>PvP races</h2></div>
-    <div class="grid-item challenges" [routerLink]="['challendes']"><h2>Challenges</h2></div>
+    <div class="grid-item challenges" [routerLink]="['challenges']"><h2>Challenges</h2></div>
     <div class="grid-item"><h2>3</h2></div>
     <div class="grid-item garage" [routerLink]="['garage']"><h2>My garage</h2></div>
     <div class="grid-item shop" [routerLink]="['shop']"><h2>Shop</h2></div>
