--- a/src/app/pages/choose-cards/choose-cards.component.css
+++ b/src/app/pages/choose-cards/choose-cards.component.css
@@ -53,7 +53,10 @@
     margin: 50px;
 }
 
-.dropzone {
+.dropzone img {
     border: 1px solid red;
-    min-height: 100px;
+    height: 300px;
+    width: 400px;
+    max-height: 300px;
+    max-width: 400px;
 }
