--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -54,8 +54,8 @@ span {
 .flip_box,
 .front,
 .back {
-    width: 300px;
-    height: 360px;
+    width: 270px;
+    height: 324px;
     border-radius: 15px;
 }
 
@@ -76,6 +76,8 @@ span {
     -moz-transform: perspective(1200px);
     -webkit-perspective: 1200px;
     perspective: 1200px;
+    margin: 5px;
+
 }
 
 .flip_box,
@@ -84,6 +86,13 @@ span {
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     transform-style: preserve-3d;
+
+}
+
+.front, .back {
+    /*box-shadow: 2px 2px black;*/
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+
 }
 
 .front {
@@ -113,14 +122,14 @@ span {
 .r_wrap {
     position: absolute;
     transition: all 0.5s ease-out;
-    bottom: 52px;
+    bottom: 32px;
 }
 
 .b_round,
 .s_round {
     position: absolute;
-    width: 300px;
-    height: 52px;
+    width: 270px;
+    height: 32px;
     border-radius: 0px 0px 15px 15px;
     transition: all 0.5s ease-out;
     background-color: #D21849;
@@ -141,8 +150,8 @@ span {
 }
 
 .s_arrow {
-    width: 52px;
-    height: 52px;
+    width: 32px;
+    height: 32px;
     background-image: url('https://img-fotki.yandex.ru/get/194549/29644339.5/0_d6c60_1d7815f0_orig');
     background-color: transparent;
 }
@@ -176,4 +185,15 @@ td {
     max-width: 300px;
     overflow: hidden;
     white-space: nowrap;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    z-index: 999; /* Make sure the overlay is above other content */
+    pointer-events: none; /* This allows mouse events to pass through the overlay */
 }
