--- a/src/app/pages/garage/garage.component.css
+++ b/src/app/pages/garage/garage.component.css
@@ -9,9 +9,9 @@
 html,
 body {
 
-    height: 100%;
+    min-height: 100%;
     width: 100%;
-
+    margin: 0;
     place-items: center;
     background: linear-gradient(375deg, #1cc7d0, #2ede98);
 }
@@ -26,14 +26,13 @@ ngb-pagination {
 }
 
 .grid-container {
+    overflow-y: hidden;
     display: grid;
-    grid-gap: 10px;
-    padding: 20px;
-    align-items: center;
-    justify-content: center;
-    height: calc(100% - 128px); /* Subtracting the header and footer height */
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 0px;
+    padding: 0px;
+    height: calc(100% - 30%); /* Subtracting the header and footer height */
+    grid-template-rows: auto auto;
+    grid-auto-flow: column;
 }
 
 .my-pagination {
@@ -58,3 +57,28 @@ ngb-pagination {
     padding: 0 5px;
 }
 
+.grid-container-filter-bar {
+    display: grid;
+    grid-gap: 10px;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.cdk-virtual-scroll-data-source-example .viewport {
+    height: 650px;
+    width: 1200px;
+    border: 1px solid black;
+}
+
+.viewport .cdk-virtual-scroll-content-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+.cdk-virtual-scroll-data-source-example .example-item {
+    width: 310px;
+    height: 100%;
+}
