drag&drop functionality working properly

--- a/src/app/pages/cards-pairing/cards-pairing.component.html
+++ b/src/app/pages/cards-pairing/cards-pairing.component.html
@@ -1,6 +1,7 @@
 <button
         routerLink="challenge">go to challenge
 </button>
+<app-opponent-hand></app-opponent-hand>
 <div cdkDropListGroup>
     <div class="drop-places">
         <div
