--- a/src/app/pages/choose-cards/choose-cards.component.html
+++ b/src/app/pages/choose-cards/choose-cards.component.html
@@ -23,6 +23,6 @@ cdkDropListGroup>
             <button
             (click)=rechooseCards()>Rechoose cards</button>
             <button
-            (click)="gotoRaces()">Go to races</button>
+            (click)="gotoRaces()">Go to pairing</button>
         </div>
 </div>
